Maybe ProcessBuilder works better?